a stable commit after refactoring